# BandBot

./: .env  .gitignore  bot.py  database.py  keep_alive.py  main.py  pyproject.toml  suggestion_data.py  update-discord.py.sh  utilities.py
backend/: daily.json  gamenight.json  starboard.json
cogs/: daily.py  daily_reminder.py  devs.py  game_night.py  general.py  help.py  holidays.py  moderation.py  quotes.py  snipe.py  suggestions.py
src/: bot.py  database.py  keep_alive.py  utilities.py
src/cogs/: config.py  daily.py  devs.py  error_handler.py  game_night.py  general.py  help.py  holidays.py  misc.py  moderation.py  quotes.py  starboard.py
tests/: checkiday.py  json_test.py  test.json
